# spoopify

./: README.md  design-outline.md
libspoopify/: Cargo.toml  readme.md
libspoopify/src/: lib.rs
libspoopify/src/music_library/: mod.rs  schema.rs
